--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - asset/login1.png
+   - asset/login.png
    - asset/register.png
 
   #   - images/a_dot_ham.jpeg
